tests/misc/tillegalReturn.nim
discard """
errormsg: "'return' not allowed here"
line: 6
"""

return
